--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -22,7 +22,7 @@
     <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-alpha6-1" />
     <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-alpha6" />
     <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-alpha6" />
-    <PackageReference Include="Piranha.Manager" Version="4.0.0-alpha6" />
+    <PackageReference Include="Piranha.Manager" Version="4.0.0-alpha6-1" />
   </ItemGroup>
 
 </Project>
