--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -18,11 +18,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" />
-    <PackageReference Include="Piranha" Version="4.0.0-alpha6" />
-    <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-alpha6-1" />
-    <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-alpha6" />
-    <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-alpha6" />
-    <PackageReference Include="Piranha.Manager" Version="4.0.0-alpha6-1" />
+    <PackageReference Include="Piranha" Version="4.0.0-alpha7" />
+    <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-alpha7" />
+    <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-alpha7" />
+    <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-alpha7" />
+    <PackageReference Include="Piranha.Manager" Version="4.0.0-alpha7" />
   </ItemGroup>
 
 </Project>
