--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ CoreWeb/assets/lib/
 # Uploaded assets
 CoreWeb/wwwroot/uploads/
 
+# User database
+CoreWeb/*.db
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
