--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,19 +9,24 @@
     <Folder Include="wwwroot\assets\img\" />
   </ItemGroup>
   <ItemGroup>
+    <!--
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Data.SQLite" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" />
-    <PackageReference Include="Piranha" Version="4.0.0-alpha7-1" />
-    <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-alpha7" />
-    <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-alpha7" />
-    <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-alpha7" />
-    <PackageReference Include="Piranha.Manager" Version="4.0.0-alpha7" />
+    -->
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Data.SQLite" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
+    <PackageReference Include="Piranha" Version="4.0.0-beta1" />
+    <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-beta1" />
+    <PackageReference Include="Piranha.AspNetCore.SimpleSecurity" Version="4.0.0-beta1" />    
+    <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-beta1" />
+    <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-beta1" />
+    <PackageReference Include="Piranha.Manager" Version="4.0.0-beta1-1" />
   </ItemGroup>
 
 </Project>
