--- a/CoreWeb/CoreWeb.csproj
+++ b/CoreWeb/CoreWeb.csproj
@@ -9,24 +9,15 @@
     <Folder Include="wwwroot\assets\img\" />
   </ItemGroup>
   <ItemGroup>
-    <!--
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" />
-    -->
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Data.SQLite" Version="2.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
-    <PackageReference Include="Piranha" Version="4.0.0-beta1" />
-    <PackageReference Include="Piranha.AspNetCore" Version="4.0.0-beta1" />
-    <PackageReference Include="Piranha.AspNetCore.SimpleSecurity" Version="4.0.0-beta1" />    
-    <PackageReference Include="Piranha.AttributeBuilder" Version="4.0.0-beta1" />
-    <PackageReference Include="Piranha.Local.FileStorage" Version="4.0.0-beta1" />
-    <PackageReference Include="Piranha.Manager" Version="4.0.0-beta1-1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.1" />
+    <PackageReference Include="Piranha" Version="4.1.0" />
+    <PackageReference Include="Piranha.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Piranha.AspNetCore.SimpleSecurity" Version="4.1.0" />    
+    <PackageReference Include="Piranha.AttributeBuilder" Version="4.1.0" />
+    <PackageReference Include="Piranha.Local.FileStorage" Version="4.1.0" />
+    <PackageReference Include="Piranha.Manager" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
